--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a service for managing the organizations",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "mongoose": "^5.9.27",
     "winston": "^3.3.3"
