feat: add base template for the service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
-version: "2.1"
+version: '2.1'
 services:
   hierarchy-service:
     container_name: hierarchy-service
     image: hierarchy-service:latest
     ports:
-        - '3000:3000'
-    build: . 
+      - '3000:3000'
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     volumes:
-        - ./src:/usr/app/src
+      - ./src:/usr/app/src
     environment:
-      KARTOFFEL_API: "http://kartoffel-master.eastus.cloudapp.azure.com:3000/api"
+      KARTOFFEL_API: 'http://kartoffel-master.eastus.cloudapp.azure.com:3000/api'
     restart: always
-
-  
