--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,11 +3,14 @@ services:
   hierarchy-service:
     container_name: hierarchy-service
     image: hierarchy-service:latest
+    command: npm run dev:watch # Hot reload
     ports:
       - "3000:3000"
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
     volumes:
-      - ./logs/hierarchy:/usr/src/app/logs/hierarchy
+      - ./src:/usr/src/app/src # share src code with the containers
     environment:
       KARTOFFEL_API: "http://kartoffel-master.eastus.cloudapp.azure.com:3000/api"
     restart: always
