build: change docker file stages and loggers

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,7 +8,7 @@ services:
       - '3000:3000'
     build:
       context: .
-      target: BUILD
+      target: DEV
     volumes:
       - ./src:/usr/src/app/src # share src code with the containers
     environment:
