--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
     "winston": "^3.3.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.0.27",
     "nodemon": "^2.0.4",
