--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.27",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2",
