--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,11 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2020",
     "module": "commonjs",
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
-    "noImplicitAny": false,
-    "esModuleInterop": true,
-    "noImplicitReturns": true,
-    "allowSyntheticDefaultImports": true
-  },
-  "include": ["src/**/*.ts"],
-  "exclude": ["src/**/*.spec.ts", "node_modules"]
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
+  }
 }
