--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -1,21 +1,18 @@
 version: "3.5"
 services:
   group-service:
-    container_name: group-service
     image: group-service:latest
-    command: npm run dev:watch # Hot reload
+    command: npm run dev:watch
     ports:
       - "3000:3000"
     build:
       context: .
       target: DEV
     volumes:
-      - ./src:/usr/src/app/src # share src code with the containers
+      - ./src:/usr/src/app/src
     environment:
       - DB_SERVER=ds063789.mlab.com
       - DB_NAME=groups
       - DB_USERNAME=admin
       - DB_PASSWORD=Aa123456
       - DB_PORT=63789
-
-    restart: always
