--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: "2.1"
+version: "3.5"
 services:
   group-service:
-    container_name: group-service
     image: group-service:latest
     ports:
       - "3000:3000"
     build: .
     volumes:
       - ./logs:/usr/src/app/logs
-    # environment:
+    environment:
+      - LOG_FILE_DIR=logs
     depends_on:
       - mongo
     restart: always
