--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.28",
+    "morgan": "^1.10.0",
     "winston": "^3.3.3",
-    "morgan": "^1.10.0"
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
