--- a/package.json
+++ b/package.json
@@ -24,17 +24,16 @@
     "@types/node": "^14.0.27",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
-    "nodemon": "^2.0.4",
-    "ts-node": "^8.10.2",
+    "tsc-watch": "^4.2.9",
+    "tslint": "^6.1.3",
+    "tslint-config-airbnb": "^5.11.2",
     "typescript": "^3.9.7"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "dev": "ts-node src/index.ts",
-    "dev:watch": "nodemon --exec ts-node -- ./src/index.ts",
-    "start": "nodemon ./dist/index.js",
+    "dev": "tsc-watch --project . --onSuccess \"node dist/index.js\"",
     "install:prod": "npm install --production"
   },
   "repository": {
