--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,14 @@
-version: "3.5"
+version: '3.5'
 services:
   group-service:
     image: group-service:latest
     ports:
-      - "3000:3000"
+      - '3000:3000'
     build: .
     volumes:
       - ./logs:/usr/src/app/logs
     environment:
       - LOG_FILE_DIR=logs
-      - AUTHENTICATION_REQUIRED=true
     depends_on:
       - mongo
     restart: always
