--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "winston-mongodb": "^5.0.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
