--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
@@ -13,6 +14,7 @@
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0",
     "winston-mongodb": "^5.0.3"
   },
   "devDependencies": {
@@ -34,7 +36,8 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "dev": "tsc-watch --project . --onSuccess \"node dist/index.js\"",
-    "install:prod": "npm install --production"
+    "install:prod": "npm install --production",
+    "start": "tsc && node -r dotenv/config dist/index.js"
   },
   "repository": {
     "type": "git",
